# opensomeip-examples

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
config/: complex_types.yaml  e2e_protection.yaml  events.yaml  hello_world.yaml  large_messages.yaml  method_calls.yaml  sd_demo.yaml
cpp/: CMakeLists.txt  CMakePresets.json
cpp/common/: config.cpp  config.h
cpp/complex_types/: CMakeLists.txt  client.cpp  server.cpp
cpp/e2e_protection/: CMakeLists.txt  basic_e2e.cpp
cpp/events/: CMakeLists.txt  publisher.cpp  subscriber.cpp
cpp/hello_world/: CMakeLists.txt  client.cpp  server.cpp
cpp/large_messages/: CMakeLists.txt  client.cpp  server.cpp
cpp/method_calls/: CMakeLists.txt  client.cpp  server.cpp
cpp/sd_demo/: CMakeLists.txt  server.cpp
docker/: Dockerfile.cpp  Dockerfile.python  Dockerfile.zephyr  docker-compose.yml  docker-compose.zephyr.yml
python/: requirements.txt  setup_venv.sh
python/common/: config.py
python/complex_types/: README.md  client.py  server.py
python/e2e_protection/: README.md  basic_e2e.py
python/events/: README.md  publisher.py  subscriber.py
python/hello_world/: README.md  client.py  server.py
python/large_messages/: README.md  client.py  server.py
python/method_calls/: README.md  client.py  server.py
python/sd_demo/: README.md  server.py
scripts/: run_renode_test.sh  zephyr_build.sh
zephyr/e2e_protection/: CMakeLists.txt  prj.conf
zephyr/e2e_protection/src/: main.cpp
zephyr/events_publisher/: CMakeLists.txt
zephyr/events_publisher/src/: main.cpp
zephyr/events_subscriber/: CMakeLists.txt  prj.conf
zephyr/events_subscriber/src/: main.cpp
zephyr/hello_world_client/: CMakeLists.txt  prj.conf
zephyr/hello_world_client/src/: main.cpp
zephyr/hello_world_server/: CMakeLists.txt
zephyr/hello_world_server/boards/: s32k388_renode.conf
zephyr/hello_world_server/src/: main.cpp
zephyr/method_calls_client/: CMakeLists.txt  prj.conf
zephyr/method_calls_client/src/: main.cpp
zephyr/method_calls_server/: CMakeLists.txt
zephyr/method_calls_server/src/: main.cpp
zephyr/renode/: s32k388_examples.resc
